# jobhunt

./: .gitignore  CLAUDE.md  README.md  SKILL.md  config.yaml  install.sh  pyproject.toml  uninstall.sh
agents/apply/: config.yaml  task_prompt.md
agents/tailor/: config.yaml  task_prompt.md
docs/: DESIGN-ashby-fix.md
jobhunt/: __main__.py  analyzer.py  auth.py  browser.py  cli.py  config.py  credentials.py  db.py  extractor.py  fetcher.py  models.py  openai_client.py  tailor.py  utils.py
migrations/: 0002_phase2a_status_and_notes.sql
prompts/: analyze.md  classify.md  tailor.md
references/prompts/: analyze.md  classify.md  tailor.md
scripts/: __init__.py  __main__.py  ats_resolver.py  auth.py  browser.py  bu_apply.py  captcha.py  cli.py  config.py  credentials.py  db.py  extractor.py  fetcher.py  greenhouse_apply.py  pipeline.py  test_cdp_greenhouse.py  test_cdp_submit_only.py  test_playwright_greenhouse.py
tests/: conftest.py  test_analyzer.py  test_ats_resolver.py  test_cli.py  test_credentials.py  test_db.py  test_extractor.py  test_fetcher.py  test_openai_client.py  test_pipeline.py  test_status.py  test_tailor.py
