[project]
name = "jobhunt"
version = "0.2.0"
description = "Automated job pipeline — ClawHub skill"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "click>=8.1",
    "playwright>=1.40",
    "rich>=13.0",
    "pyyaml>=6.0",
    "requests>=2.31",
    "markdown>=3.10.2",
]

[project.scripts]
jobhunt = "scripts.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
